--- a/ireland_app/static/assets/scss/_footer.scss
+++ b/ireland_app/static/assets/scss/_footer.scss
@@ -1,12 +1,25 @@
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
-#footer {
-  background: darken($secondary, 10);
-  color: $white;
-  font-size: 14px;
-  text-align: center;
-  padding: 30px 0;
+// #footer {
+//   background: darken($secondary, 10);
+//   color: $white;
+//   font-size: 14px;
+//   text-align: center;
+//   padding: 30px 0;
+
+#footer{
+  background: #212529;
+}
+
+#footer .footer-top .footer-info{
+  background: #dedede;
+  color: black;
+}
+
+.footer-logo{
+  width: 200px;
+}
 
   h3 {
     font-size: 36px;
