bohot sare pages done phew !!

--- a/ireland_app/templates/index.html
+++ b/ireland_app/templates/index.html
@@ -4,7 +4,7 @@
 
 
 
-      
+
 
 
   <main id="main">
@@ -99,28 +99,30 @@
 
         <div class="section-title" data-aos="zoom-out">
           <h2>About</h2>
-          <p>Who we are</p>
+          <p>Why choose Ireland ?</p>
         </div>
 
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Ireland is a safe and friendly location for family life.</li>
+              <li><i class="ri-check-double-line"></i> Ireland's air quality and food products are world renowned.</li>
+              <li><i class="ri-check-double-line"></i> Ireland has a world-renowned education system for students of all ages</li>
+              <li><i class="ri-check-double-line"></i> Ireland offers a fantastic base for retirement.</li>
+              <li><i class="ri-check-double-line"></i>Irelands private healthcare system is relatively inexpensive and has temperature climate.
+</li>
+              <li><i class="ri-check-double-line"></i> Ireland has multiethnic populace and sparsely populated living environment.</li>
+
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+              Dublin, Irelands capital is now ranked 46th most expensive city in the world.
+Ireland is a neutral country and the 12th most peaceful country out of 163 nations to live. (2020 Global Peach Index)
+Irish citizens are free to travel, live, work or be educated in any European Union state.
+
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <a href="{% url 'whyus' %}" class="btn-learn-more">Learn More</a>
           </div>
         </div>
 
@@ -128,7 +130,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Cta Section ======= -->
-    <section id="cta" class="cta">
+    <!-- <section id="cta" class="cta">
       <div class="container">
 
         <div class="row" data-aos="zoom-out">
@@ -142,7 +144,7 @@
         </div>
 
       </div>
-    </section>
+    </section> -->
 
     <!-- End Cta Section -->
 
