--- a/ireland_app/templates/aboutus.html
+++ b/ireland_app/templates/aboutus.html
@@ -3,110 +3,65 @@
 {% block body_block %}
 
 
-<main>
+<main id="main">
 
-  <div class="bg-light">
-  <div class="container py-5">
-    <div class="row h-100 align-items-center py-5">
-      <div class="col-lg-6">
-        <h1 class="display-4">About us page</h1>
-        <p class="lead text-muted mb-0">Create a minimal about us page using Bootstrap 4.</p>
-        <p class="lead text-muted">Snippet by <a href="https://bootstrapious.com/snippets" class="text-muted">
-                    <u>Bootstrapious</u></a>
-        </p>
+
+<!-- ======= About Section ======= -->
+<section id="about" class="about">
+  <div class="container">
+
+    <div class="row">
+      <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
+        <img src="{% static 'assets/img/visatoirelandlogo.jpg' %}" class="img-fluid" alt="">
       </div>
-      <div class="col-lg-6 d-none d-lg-block"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/illus_kftyh4.png" alt="" class="img-fluid"></div>
+      <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+        <h2 style="font-weight: 600;">ABOUT US</h2>
+      <i>
+          Visa To Ireland is a full-service immigration network firm based in Ireland with satellite offices located in New York, Hawaii, Texas and Florida. We have offices worldwide in Canada, Egypt, India, Spain – Portugal, Greece, Cyprus, Ireland, Philippines, Australia, Germany and Denmark. We are a team composed of experienced immigration attorneys, financial advisors and legal experts who know every step of the U.S. immigration process from top to bottom.
+        </i>
+        <!-- <ul>
+          <li><i class="icofont-check-circled"></i> As a team, we strive to provide each and every client with a highly personalized legal strategy to ensure success in every one of our clients’ unique immigration goals.</li>
+          <li><i class="icofont-check-circled"></i> Our immigration attorneys have work experience in corporate and tax law and will make sure that every legal need or concern our clients bring to us is addressed in a timely and efficient manner.</li>
+          <li><i class="icofont-check-circled"></i> As a company, we are familiar that the different backgrounds of our clients require different needs. Our staff is fluent in a variety of languages including English, Spanish, Chinese, Hebrew, Tagalog, Hindi, Arabic and Portuguese.</li>
+        </ul> -->
+      </div>
+
+      <!-- <p>
+        Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+        culpa qui officia deserunt mollit anim id est laborum
+      </p> -->
+      <div class="col-lg-12 order-1 order-lg-2" data-aos="fade-right">
+        <div class="col-lg-12 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
+        <ul>
+        <li><i class="ri-check-double-line"></i> As a team, we strive to provide each and every client with a highly personalized legal strategy to ensure success in every one of our clients’ unique immigration goals.</li>
+        <li><i class="ri-check-double-line"></i> Our immigration attorneys have work experience in corporate and tax law and will make sure that every legal need or concern our clients bring to us is addressed in a timely and efficient manner.</li>
+        <li><i class="ri-check-double-line"></i> As a company, we are familiar that the different backgrounds of our clients require different needs. Our staff is fluent in a variety of languages including English, Spanish, Chinese, Hebrew, Tagalog, Hindi, Arabic and Portuguese.</li>
+      </ul>
     </div>
+          <i>As a network firm, we value trust and communication over all else when it comes to building client relationships. We understand that each and every client’s primary goal is to make the United States your new home, either temporarily or permanently. We open up the world to you and give you the option of choosing a new home in Canada, Spain, Portugal, Greece, Cyprus, Ireland, Australia, New Zealand, Germany and Denmark.</i>
+      <i>So, once we take you on as a client we commit everything in our power to making sure that goal comes true.</i>
+      <i>Working with Visa To Ireland ensures that you will have the best immigration representation possible. We will be available to you to solve any problems that may arise. If you want a Visa to Ireland, contact us today and we will get started. Let us help guide you to your Dream.</i>
+      </div>
+    </div>
+
   </div>
-</div>
+</section><!-- End About Section -->
 
-<div class="bg-white py-5">
-  <div class="container py-5">
-    <div class="row align-items-center mb-5">
-      <div class="col-lg-6 order-2 order-lg-1"><i class="fa fa-bar-chart fa-2x mb-3 text-primary"></i>
-        <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-        <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
-      </div>
-      <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834139/img-1_e25nvh.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-    </div>
-    <div class="row align-items-center">
-      <div class="col-lg-5 px-5 mx-auto"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834136/img-2_vdgqgn.jpg" alt="" class="img-fluid mb-4 mb-lg-0"></div>
-      <div class="col-lg-6"><i class="fa fa-leaf fa-2x mb-3 text-primary"></i>
-        <h2 class="font-weight-light">Lorem ipsum dolor sit amet</h2>
-        <p class="font-italic text-muted mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p><a href="#" class="btn btn-light px-5 rounded-pill shadow-sm">Learn More</a>
-      </div>
-    </div>
+<!-- ======= Why Us Section ======= -->
+<section >
+  <div style="padding-top: 10px;">
+    <div class="map" id="chartdiv" style="display: flex; width: 784px; height: 292px; margin:auto" width="784" height="292">
+    <!-- <div class="map" id="chartdiv"></div> -->
   </div>
-</div>
+</section><!-- End Why Us Section -->
 
-<div class="bg-light py-5">
-  <div class="container py-5">
-    <div class="row mb-4">
-      <div class="col-lg-5">
-        <h2 class="display-4 font-weight-light">Our team</h2>
-        <p class="font-italic text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      </div>
-    </div>
-
-    <div class="row text-center">
-      <!-- Team item-->
-      <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834132/avatar-4_ozhrib.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Manuella Nevoresky</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-          <ul class="social mb-0 list-inline mt-3">
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-      <!-- End-->
-
-      <!-- Team item-->
-      <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834130/avatar-3_hzlize.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Samuel Hardy</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-          <ul class="social mb-0 list-inline mt-3">
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-      <!-- End-->
-
-      <!-- Team item-->
-      <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-2_f8dowd.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">Tom Sunderland</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-          <ul class="social mb-0 list-inline mt-3">
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-      <!-- End-->
-
-      <!-- Team item-->
-      <div class="col-xl-3 col-sm-6 mb-5">
-        <div class="bg-white rounded shadow-sm py-5 px-4"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556834133/avatar-1_s02nlg.png" alt="" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-          <h5 class="mb-0">John Tarly</h5><span class="small text-uppercase text-muted">CEO - Founder</span>
-          <ul class="social mb-0 list-inline mt-3">
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-facebook-f"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="#" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
-      <!-- End-->
-
-    </div>
-  </div>
-</div>
 </main>
+
+<!-- MAPS -->
+<script src="https://cdn.amcharts.com/lib/4/core.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/maps.js"></script>
+<script src="https://cdn.amcharts.com/lib/4/geodata/worldLow.js"></script>
+<script src="{% static 'assets/js/map.js' %}"></script>
+
+
 {% endblock %}
