--- a/ireland_app/templates/whyus.html
+++ b/ireland_app/templates/whyus.html
@@ -353,7 +353,7 @@ The specific requirements are that you have a period of 365 days* (1 year) conti
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
             <h3>Do you need a VISA?</h3>
-  
+
 
             <ul>You do not need an Irish visa to travel to Ireland if:
               <li><i class="ri-check-double-line"></i>  you have a valid Irish Residence Permit, or you have a Travel Document which was issued by Ireland</li>
@@ -361,7 +361,10 @@ The specific requirements are that you have a period of 365 days* (1 year) conti
               <!-- <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li> -->
             </ul>
             <p>
-              If you're not from the EU or EEA, you need to apply for a visa to enter Ireland and study there. The type of visa you should apply for depends on the length of your degree:
+              For all other situations, regardless of where you live, or the nationality of your family member, you’re needing an Irish Visa or Preclearance is based on:
+ your nationality (if you are not a refugee) or
+  the country which issued your travel document (if you are a refugee).
+
 
             </p>
           </div>
