--- a/ireland_app/templates/base.html
+++ b/ireland_app/templates/base.html
@@ -64,7 +64,7 @@
           <ul>
             <li><a href="{% url 'shortvisa' %}">Short Stay Visas</a></li>
             <li><a href="{% url 'studentvisa' %}">Student visa</a></li>
-            <li><a href="#">Long Stay Visas</a></li>
+            <li><a href="{% url 'longvisa' %}">Long Stay Visas</a></li>
             <!-- <li><a href="#">Drop Down 4</a></li> -->
           </ul>
         </li>
@@ -146,7 +146,7 @@
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'aboutus' %}">About Us</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'studentvisa' %}">Student visa </a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="{% url 'shortvisa' %}">Short stay visa</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Long stay visa</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="{% url 'longvisa' %}">Long stay visa</a></li>
             <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Self employment visa</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#"> Investing visa</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Entrepreneur visa</a></li> -->
