--- a/ireland_app/templates/longvisa.html
+++ b/ireland_app/templates/longvisa.html
@@ -39,7 +39,7 @@
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="300">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-4">
           <i class="ri-store-line"></i>
-          <h4 class="d-none d-lg-block">Study visa</h4>
+          <h4 class="d-none d-lg-block">Employment visa</h4>
         </a>
       </li>
     </ul>
@@ -568,7 +568,16 @@ Document rules are outlined below and documents submitted must adhere to these r
       </div>
     </div>
 
+<br>
+<h4>Visa for non-EU/EEA & non-Swiss citizen travelling with EU/EEA/Swiss family</h4>
+<ul>
+  If you are a non-EEA national:
+<li> who does not hold a document called “Residence card of a family member of a Union citizen” as referred to in Articles 5(2) and 10(1) of Directive 2004/38/EC on the rights of citizens of the Union and their family members to move and reside freely within the territory of Member States, and</li>
+<li>wishes to accompany or join an EU/EEA/Swiss citizen family member who is moving to or residing in Ireland pursuant to the Directive 2004/38/EC,</li>
+<li>You can apply for a single journey short-stay C visa which will permit you to enter and reside in the State for up to 3 months.</li>
+<li>In the event that you wish to remain in the State for more than 3 months as a family member of an EU citizen exercising their free movement rights, you must apply (when in the State) for a Residence Card of a family member of a Union citizen.</li>
 
+</ul>
 
 
   </div>
