--- a/ireland_app/templates/longvisa.html
+++ b/ireland_app/templates/longvisa.html
@@ -76,7 +76,7 @@
           <i style="color:green;">The Visa Officer considers each application on its merits and may request additional information or documentation.</i>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/study.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
 The Visa Officer considers each application on its merits and may request additional information or documentation.</p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/uk family member.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -196,7 +196,7 @@ Original documents must be provided.
 </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/family member.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -229,12 +229,12 @@ Original documents must be provided.
             <p>All letters submitted from a business, company or other organization should be on official headed paper and give full contact details so that they can be verified. These must include a full postal address, name of contact, position in the organization, telephone number (landline), website, and email address (email addresses such as Yahoo or Hotmail are not accepted).</p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/employment.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
     </div>
-
+<p></p>
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-5">
@@ -296,7 +296,7 @@ If you are visiting another State prior to travelling to Ireland, you must have 
 
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/researcher.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -309,7 +309,7 @@ If you are visiting another State prior to travelling to Ireland, you must have 
 
             <ol>You can apply for this visa if you are:
 
-              <li>    lawfully resident in the EU Member State in which the employer is established</li>
+              <li>lawfully resident in the EU Member State in which the employer is established</li>
               <li>lawfully employed by the employer in the sending EU Member State</li>
               <li>on the payroll of the employer in the sending EU Member State</li>
               <li>on the payroll of the employer in the sending EU Member State</li>
@@ -340,7 +340,7 @@ You can apply for an Employment (Van der Elst) visa up to 3 months before your d
 </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/vander elst.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -445,7 +445,7 @@ You can apply for an Employment (Van der Elst) visa up to 3 months before your d
 </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/minister of religion.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -562,7 +562,7 @@ Document rules are outlined below and documents submitted must adhere to these r
 </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/volunteer.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
