--- a/ireland_app/templates/studentvisa.html
+++ b/ireland_app/templates/studentvisa.html
@@ -24,7 +24,7 @@
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
           <i class="ri-body-scan-line"></i>
-          <h4 class="d-none d-lg-block">Most popular academic disciplines in Ireland</h4>
+          <h4 class="d-none d-lg-block">Popular academic disciplines in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
@@ -62,7 +62,7 @@
           <p>If you’re still not sure where you want to study in Ireland, you will have to decide before you can start your student visa application process. After being accepted at an Irish university, you’ll get an acceptance letter required for the visa application.</p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/advantage of education system.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -81,7 +81,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/academic desciplines.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -99,7 +99,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/best universities.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -119,17 +119,17 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/student visa.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
     </div>
-
+<p></p>
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-5">
           <i class="ri-gps-line"></i>
-          <h4 class="d-none d-lg-block">When and where to apply for the study visa in Ireland?</h4>
+          <h4 class="d-none d-lg-block">When and where to apply for study visa in Ireland?</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
@@ -168,7 +168,7 @@
 
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/when where to apply.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -189,7 +189,7 @@ International students must meet the minimum English language requirements in or
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/language req.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -197,7 +197,7 @@ International students must meet the minimum English language requirements in or
       <div class="tab-pane" id="tab-7">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3> Documents required for the student visa in Ireland</h3>
+            <h3> Documents for the student visa in Ireland</h3>
 
             <ul>
               <li><i class="ri-check-double-line"></i>Two recent colour passport-size photographs</li>
@@ -239,7 +239,7 @@ International students must meet the minimum English language requirements in or
 </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/documents req.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -263,7 +263,7 @@ International students must meet the minimum English language requirements in or
             </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/permit residency.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
