--- a/ireland_app/templates/whyus.html
+++ b/ireland_app/templates/whyus.html
@@ -24,7 +24,7 @@
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="100">
         <a class="nav-link" data-bs-toggle="tab" href="#tab-2">
           <i class="ri-body-scan-line"></i>
-          <h4 class="d-none d-lg-block">Types of Companies operating in Ireland</h4>
+          <h4 class="d-none d-lg-block">Types of Companies in Ireland</h4>
         </a>
       </li>
       <li class="nav-item col-3" data-aos="zoom-in" data-aos-delay="200">
@@ -64,7 +64,7 @@
       <div class="tab-pane" id="tab-2">
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>Types of Companies operating in Ireland</h3>
+            <h3>Types of Companies in Ireland</h3>
 
             <ul>
               <li><i class="ri-check-double-line"></i>Ireland is the largest exporter of computer software in the world</li>
@@ -77,7 +77,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/companies in ireland.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -95,7 +95,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/property market.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -119,12 +119,12 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/education system.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
     </div>
-
+<p></p>
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-3" data-aos="zoom-in">
         <a class="nav-link " data-bs-toggle="tab" href="#tab-5">
@@ -174,7 +174,7 @@
 
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/universities.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -191,7 +191,7 @@
             <p>When entering a hospital in Ireland, your private medical insurance details are taken and, in most cases, the private health insurance company will pay the hospital directly for their services.</p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/healthcare.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -230,7 +230,7 @@
           </div>
 
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/social welfare.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -251,7 +251,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/imp policy.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -298,7 +298,7 @@
             </ol>
               </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/investment.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -322,7 +322,7 @@
             </ol>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/terms.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -345,7 +345,7 @@ The specific requirements are that you have a period of 365 days* (1 year) conti
 
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/residency.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -369,7 +369,7 @@ The specific requirements are that you have a period of 365 days* (1 year) conti
             </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/visa.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
