--- a/ireland_app/templates/shortvisa.html
+++ b/ireland_app/templates/shortvisa.html
@@ -60,7 +60,7 @@
             </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/policy c visa.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -82,7 +82,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/assessment.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -114,36 +114,13 @@
           </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/documents req.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
-      <!-- <div class="tab-pane" id="tab-4">
-        <div class="row">
-          <div class="col-lg-6 order-2 order-lg-1 mt-3 mt-lg-0">
-            <h3>Omnis fugiat ea explicabo sunt dolorum asperiores sequi inventore rerum</h3>
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
-            </p>
-            <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-            </ul>
-          </div>
-          <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-4.png" alt="" class="img-fluid">
-          </div>
-        </div>
-      </div> -->
-    </div>
 
+    </div>
+<p></p>
     <ul class="nav nav-tabs row d-flex">
       <li class="nav-item col-4" data-aos="zoom-in">
         <a class="nav-link active show" data-bs-toggle="tab" href="#tab-4">
@@ -195,7 +172,7 @@
             </p>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="{% static 'assets/img/ireland1.jpeg' %}" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/about visa.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -218,7 +195,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-2.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/who needs to apply.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
@@ -248,7 +225,7 @@
             </ul>
           </div>
           <div class="col-lg-6 order-1 order-lg-2 text-center">
-            <img src="assets/img/features-3.png" alt="" class="img-fluid">
+            <img src="{% static 'assets/img/spl visa program.jpg' %}" alt="" class="img-fluid">
           </div>
         </div>
       </div>
